packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/accept/setops.ttrp
container c(in a, in b, out result) target erp_pg """sql
SELECT id FROM a
UNION ALL
SELECT id FROM b
"""
