packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-010.ttrp
// expect: TTRP-SQL-010
container c target erp_pg """sql
SELECT id INTO t2 FROM t
"""
